試しにnetlifyにデプロイしてみる

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://www.kaichan.info/"
+baseURL = "https://clever-murdock-3ab329.netlify.com/"
 languageCode = "ja-JP"
 title = "備忘録"
 subtitle = "いろいろ忘れないためのブログ"
