--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes\\hugo-octopress"]
-	path = themes\\hugo-octopress
+[submodule "themes/hugo-octopress"]
+	path = themes/hugo-octopress
 	url = https://github.com/parsiya/Hugo-Octopress.git
