--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 os: xenial
 language: shell  # MEANINGLESS!
 before_install:
+  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 762E3157
   - sudo add-apt-repository -y ppa:kelleyk/emacs
   - sudo apt-get update
   - sudo apt-get install -y emacs26
