--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
 after_success:
   - |
     git add content
-    git -c user.name "Travis CI" -c user.email "travis@travis-ci.org" commit -m "[ci skip] Update documents generated from ${TRAVIS_COMMIT}"
+    git -c user.name="Travis CI" -c user.email="travis@travis-ci.org" commit -m "[ci skip] Update documents generated from ${TRAVIS_COMMIT}"
     git push "https://${GITHUB_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git" "$TRAVIS_BRANCH"
 env:
   global:
