subtitle は params 以下にないといけなかったようだ

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,10 @@
 baseURL = "https://clever-murdock-3ab329.netlify.com/"
 languageCode = "ja-JP"
 title = "備忘録"
-subtitle = "いろいろ忘れないためのブログ"
 theme = "hugo-octopress"
 
 disableAliases = true
+
+[params]
+  # This text appears in site header under website title
+  subtitle = "いろいろ忘れないためのブログ"
