パーマリンクの形式を正しいものに変更する
":title" は日本語のタイトルになってしまうようだ。URLとしては
ファイル名と同じ形ものになってもらえばいいので代わりに
":filename" に変更した。

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ paginate = 6
 
 [permalinks]
   # Configures post URLs
-  post = "/blog/:year-:month-:day-:title/"
+  post = "/blog/:filename/"
 
 [params]
   # This text appears in site header under website title
