変更をGitHubにpushする処理をスクリプトにまとめる

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,4 @@ before_script:
 script:
   - docker run --rm -v "$PWD:/mnt" -w /mnt "$EMACS_IMAGE" emacs --batch -l hugo-export.el
 after_success:
-  - git config url."git@github.com:".pushInsteadOf "https://github.com/"
-  - git remote -v
-  - export GITHUB_DEPLOY_KEY=$(mktemp)
-  - openssl aes-256-cbc -K $encrypted_c546895bd2a4_key -iv $encrypted_c546895bd2a4_iv -in .travis/www_deploy_key_by_travis.enc -out "$GITHUB_DEPLOY_KEY" -d
-  - export GIT_SSH_COMMAND="ssh -i ${GITHUB_DEPLOY_KEY}"
-  - git diff
-  - git add content
-  - git -c user.name="Travis CI" -c user.email="travis@travis-ci.org" commit -m "[ci skip] Update documents generated from ${TRAVIS_COMMIT}"
-  - git push origin "HEAD:${TRAVIS_BRANCH}" >/dev/null 2>&1
+  - ./script/push_changes_to_github.sh
