--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_script:
 script:
   - docker run --rm -v "$PWD:/mnt" -w /mnt "$EMACS_IMAGE" emacs --batch -l hugo-export.el
 after_success:
-  - ./script/push_changes_to_github.sh
+#   - ./script/push_changes_to_github.sh
