--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,7 @@ before_script:
 script:
   - docker run --rm -v "$PWD:/mnt" -w /mnt "$EMACS_IMAGE" emacs --batch -l hugo-export.el
 after_success:
-  - echo "hoge"
-#   - ./script/push_changes_to_github.sh
+  - |
+    if [ "$TRAVIS_PULL_REQUEST" = 'false' ]; then
+      ./script/push_changes_to_github.sh
+    fi
